--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,8 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<div class="container-fluid">
+{{partial "navbar"}}
 
+<h4 class="actionResultNewsBar hidden">Some News Announcement! </h4>
 {{outlet}}
+
+{{partial "footer"}}
+</div>
