--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,1 +1,21 @@
+<h1> Login</h1>
+
+{{#if errorMessage}}
+	<h4 class="actionResultNewsBar">
+		<strong> </strong>
+		<code> {{errorMessage}}</code>
+	</h4>
+{{/if}}
+
+<div class="jumbotron">
+	<form  on='submit'> 
+		<label for="identification"> Login </label>
+		{{input value=identification placeholder="Enter Login" class="form-control"}}
+
+		<label for="password"> Password </label>
+		{{input value=password placeholder="Enter Password" class="form-control" type="password"}}
+
+		<button type="submit" class="btn btn-default" {{action 'authenticate'}}> Login </button>
+	</form>
+</div>
 {{outlet}}
