--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,40 +2,31 @@
 {{partial "navbar"}}
 
 <h4 class="actionResultNewsBar hidden">Some News Announcement! </h4>
+
 <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-warning sidebar">
 {{partial "newsticker"}}
 </nav>
 
-<div class="col-sm-6 col-md-8 d-none d-sm-block bg-info">
-    <div class="jumbotron"> 
-    	{{outlet}}
-        <h3 id="newsTitle">This is where responses goes</h3>
-        <p class="newsText" id="newsText">Select a news item from the left or a personal response from the right hand side to get starter!</p>
-        <button {{action 'editNews'}} class="btn btn-primary hiddenButton" id="editNewsButton">Edit News</button>
-    </div>
-</div>
-
-
-{{!-- This is the other bar for personal responses --}}
 {{#if session.isAuthenticated}}
-	<nav class="col-sm-3 col-md-2 d-none d-sm-block bg-warning sidebar">
-	    <h2> Personal Responses </h2>
-	  <ul class="nav nav-pills flex-column">
-	{{#each reverseResponses as |responsesItem index|}}
-	    <li class="nav-item newsBorder" id='{{reverse-news-numbers index responses.length}}r'>
-	    <a class="nav-link news-nav-bar-item"{{action 'showResponse' index responsesItem.id responses.length}}> {{reverse-news-numbers index responses.length}}: {{responsesItem.responseTitle}} </a>
-	    </li><br><br><br>
-	{{else}}
-	    <li class="nav-item">
-	        <a class="nav-link news-nav-bar-item" href="#">Sorry there is no news yet.</a>
-	    </li>
-	{{/each}}
+    <div class="col-sm-6 col-md-8 d-none d-sm-block bg-info">
+        <div class="jumbotron">
 
-	  </ul>
+            {{outlet}}
+            {{partial "newsshower"}}
+        </div>
+    </div>
+	<nav class="col-sm-3 col-md-2 d-none d-sm-block bg-warning sidebar">
+        {{partial "personalresponseticker"}}
 	</nav>
 {{else}}
-	<nav class="col-sm-3 col-md-2 d-none d-sm-block bg-warning sidebar">
-	</nav>
+    <div class="col-sm-9 col-md-10 d-none d-sm-block bg-info">
+        <div class="jumbotron">
+
+            {{outlet}}
+            {{partial "newsshower"}}
+        </div>
+    </div>
+
 {{/if}}
 
 
